==> l4es/RealTimeOperatingSystems/NutOS/nut/arch/avr/dev/gpio_avr.c <==
#include <arch/avr.h>
#include <stdlib.h>
#include <string.h>
#include <dev/gpio.h>

uint32_t GpioPinConfigGet(int bank, int bit)
{
    uint32_t rc = 0;

    switch(bank) {
#ifdef DDRA
    case AVRPORTA:
        if (inb(DDRA) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTA) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRB
    case AVRPORTB:
        if (inb(DDRB) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTB) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRC
    case AVRPORTC:
        if (inb(DDRC) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTC) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRD
    case AVRPORTD:
        if (inb(DDRD) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTD) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRE
    case AVRPORTE:
        if (inb(DDRE) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTE) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRF
    case AVRPORTF:
        if (inb(DDRF) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTF) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRG
    case AVRPORTG:
        if (inb(DDRG) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTG) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRH
    case AVRPORTH:
        if (inb(DDRH) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTH) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRI
    case AVRPORTI:
        if (inb(DDRI) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTI) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRJ
    case AVRPORTJ:
        if (inb(DDRJ) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTJ) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRK
    case AVRPORTK:
        if (inb(DDRK) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTK) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
#ifdef DDRL
    case AVRPORTL:
        if (inb(DDRL) & _BV(bit)) {
            rc |= GPIO_CFG_OUTPUT;
        }
        else if (inb(PORTL) & _BV(bit)) {
            rc |= GPIO_CFG_PULLUP;
        }
        break;
#endif
    }
    return rc;
}

int GpioPortConfigSet(int bank, unsigned int mask, uint32_t flags)
{
    switch(bank) {
#ifdef DDRA
    case AVRPORTA:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTA, inb(PORTA) | mask);
        }
        else {
            outb(PORTA, inb(PORTA) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRA, inb(DDRA) | mask);
        }
        else {
            outb(DDRA, inb(DDRA) & ~mask);
        }
        break;
#endif
#ifdef DDRB
    case AVRPORTB:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTB, inb(PORTB) | mask);
        }
        else {
            outb(PORTB, inb(PORTB) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRB, inb(DDRB) | mask);
        }
        else {
            outb(DDRB, inb(DDRB) & ~mask);
        }
        break;
#endif
#ifdef DDRC
    case AVRPORTC:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTC, inb(PORTC) | mask);
        }
        else {
            outb(PORTC, inb(PORTC) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRC, inb(DDRC) | mask);
        }
        else {
            outb(DDRC, inb(DDRC) & ~mask);
        }
        break;
#endif
#ifdef DDRD
    case AVRPORTD:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTD, inb(PORTD) | mask);
        }
        else {
            outb(PORTD, inb(PORTD) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRD, inb(DDRD) | mask);
        }
        else {
            outb(DDRD, inb(DDRD) & ~mask);
        }
        break;
#endif
#ifdef DDRE
    case AVRPORTE:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTE, inb(PORTE) | mask);
        }
        else {
            outb(PORTE, inb(PORTE) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRE, inb(DDRE) | mask);
        }
        else {
            outb(DDRE, inb(DDRE) & ~mask);
        }
        break;
#endif
#ifdef DDRF
    case AVRPORTF:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTF, inb(PORTF) | mask);
        }
        else {
            outb(PORTF, inb(PORTF) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRF, inb(DDRF) | mask);
        }
        else {
            outb(DDRF, inb(DDRF) & ~mask);
        }
        break;
#endif
#ifdef DDRG
    case AVRPORTG:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTG, inb(PORTG) | mask);
        }
        else {
            outb(PORTG, inb(PORTG) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRG, inb(DDRG) | mask);
        }
        else {
            outb(DDRG, inb(DDRG) & ~mask);
        }
        break;
#endif
#ifdef DDRH
    case AVRPORTH:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTH, inb(PORTH) | mask);
        }
        else {
            outb(PORTH, inb(PORTH) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRH, inb(DDRH) | mask);
        }
        else {
            outb(DDRH, inb(DDRH) & ~mask);
        }
        break;
#endif
#ifdef DDRI
    case AVRPORTI:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTI, inb(PORTI) | mask);
        }
        else {
            outb(PORTI, inb(PORTI) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRI, inb(DDRI) | mask);
        }
        else {
            outb(DDRI, inb(DDRI) & ~mask);
        }
        break;
#endif
#ifdef DDRJ
    case AVRPORTJ:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTJ, inb(PORTJ) | mask);
        }
        else {
            outb(PORTJ, inb(PORTJ) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRJ, inb(DDRJ) | mask);
        }
        else {
            outb(DDRJ, inb(DDRJ) & ~mask);
        }
        break;
#endif
#ifdef DDRK
    case AVRPORTK:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTK, inb(PORTK) | mask);
        }
        else {
            outb(PORTK, inb(PORTK) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRK, inb(DDRK) | mask);
        }
        else {
            outb(DDRK, inb(DDRK) & ~mask);
        }
        break;
#endif
#ifdef DDRL
    case AVRPORTL:
        if (flags & GPIO_CFG_PULLUP) {
            outb(PORTL, inb(PORTL) | mask);
        }
        else {
            outb(PORTL, inb(PORTL) & ~mask);
        }
        if (flags & GPIO_CFG_OUTPUT) {
            outb(DDRL, inb(DDRL) | mask);
        }
        else {
            outb(DDRL, inb(DDRL) & ~mask);
        }
        break;
#endif
    }
    return 0;
}

int GpioPinConfigSet(int bank, int bit, uint32_t flags)
{
    switch(bank) {
#ifdef DDRA
    case AVRPORTA:
        if (flags & GPIO_CFG_OUTPUT) {
            sbi(DDRA, bit);
        }
        else {
            if (flags & GPIO_CFG_PULLUP) {
                sbi(PORTA, bit);
            }
            else {
                cbi(PORTA, bit);
            }
            cbi(DDRA, bit);
        }
        break;
#endif
#ifdef DDRB
    case AVRPORTB:
        if (flags & GPIO_CFG_OUTPUT) {
            sbi(DDRB, bit);
        }
        else {
            if (flags & GPIO_CFG_PULLUP) {
                sbi(PORTB, bit);
            }
            else {
                cbi(PORTB, bit);
            }
            cbi(DDRB, bit);
        }
        break;
#endif
#ifdef DDRC
    case AVRPORTC:
        if (flags & GPIO_CFG_OUTPUT) {
            sbi(DDRC, bit);
        }
        else {
            if (flags & GPIO_CFG_PULLUP) {
                sbi(PORTC, bit);
            }
            else {
                cbi(PORTC, bit);
            }
            cbi(DDRC, bit);
        }
        break;
#endif
#ifdef DDRD
    case AVRPORTD:
        if (flags & GPIO_CFG_OUTPUT) {
            sbi(DDRD, bit);
        }
        else {
            if (flags & GPIO_CFG_PULLUP) {
                sbi(PORTD, bit);
            }
            else {
                cbi(PORTD, bit);
            }
            cbi(DDRD, bit);
        }
        break;
#endif
#ifdef DDRE
    case AVRPORTE:
        if (flags & GPIO_CFG_OUTPUT) {
            sbi(DDRE, bit);
        }
        else {
            if (flags & GPIO_CFG_PULLUP) {
                sbi(PORTE, bit);
            }
            else {
                cbi(PORTE, bit);
            }
            cbi(DDRE, bit);
        }
        break;
#endif
#ifdef DDRF
    case AVRPORTF:
        if (flags & GPIO_CFG_OUTPUT) {
            sbi(DDRF, bit);
        }
        else {
            if (flags & GPIO_CFG_PULLUP) {
                sbi(PORTF, bit);
            }
            else {
                cbi(PORTF, bit);
            }
            cbi(DDRF, bit);
        }
        break;
#endif
    default:
        /* Use port wide function for registers above I/O space. */
        GpioPortConfigSet(bank, _BV(bit), flags);
        break;
    }

    /* Check the result. */
    if (GpioPinConfigGet(bank, bit) != flags) {
        return -1;
    }
    return 0;
}
